--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     margin-top: 50px;
     margin-bottom: 50px;
     font-family: "Segoe UI";
+    font-size: 1.0em;
 }
 
 #footer{
@@ -145,12 +146,12 @@
 
 .thename {
     line-height: 40px;
-    text-align: center;
-	margin-top: 15px;
-	margin-left: 5px;
-	color: white;
-	font-weight: bolder;
-	float: left;
+    font-family: "Segoe UI";
+    font-size: 1.0em;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 500;
+    float: left;
 }
 
 .clear {
@@ -176,7 +177,7 @@
 }
 
 .conteudo {
-    background-color: transparent;
+    background-color: #ebf1f1;
     margin-top: 60px;
 }
 
@@ -215,6 +216,7 @@
     display: block;
     line-height: 40px;
     text-align: center;
-    height: auto;
-    width: auto;
+    font-family: "Segoe UI";
+    font-size: 1.0em;
+    text-transform: uppercase;
 }
